apps/stirling-pdf/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: stirling-pdf
  ports:
    - name: http
      port: 8080
      targetPort: http
